--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,16 @@
             if (!keys.length) { savedTripsList.innerHTML = '<div class="text-gray-300">אין טיולים שמורים</div>'; return; }
             keys.forEach(name => {
                 const item = document.createElement('div'); item.className = 'flex items-center justify-between p-2 bg-gray-700 rounded';
-                item.innerHTML = `<div class="flex flex-col text-left"><strong>${name}</strong><small class="text-gray-400">${(store[name] && store[name].days ? store[name].days.length : 0)} ימים</small></div><div class="flex gap-2"><button class="load-trip-btn px-2 py-1 bg-blue-600 text-white rounded">טען</button><button class="delete-trip-btn px-2 py-1 bg-red-600 text-white rounded">מחק</button></div>`;
+                item.innerHTML = `
+                    <div class="flex flex-col text-right">
+                        <strong>${name} (${(store[name] && store[name].days ? store[name].days.length : 0)} ימים)</strong>
+                        <small class="text-gray-400">${(store[name] && store[name].description ? store[name].description : "")}</small>
+                        
+                    </div>
+                    <div class="flex gap-2">
+                        <button class="load-trip-btn px-2 py-1 bg-blue-600 text-white rounded">טען</button>
+                        <button class="delete-trip-btn px-2 py-1 bg-red-600 text-white rounded">מחק</button>
+                    </div>`;
                 const loadBtn = item.querySelector('.load-trip-btn'); const delBtn = item.querySelector('.delete-trip-btn');
                 loadBtn.onclick = function(){ 
                     trip = store[name]; 
@@ -1048,6 +1057,7 @@
             store[name] = JSON.parse(JSON.stringify(t)); // clone
             persistSavedTrips(store);
             renderSavedTripsList();
+            savedTripsModal.classList.add('hidden');
             showToast('הטיול נשמר');
         });
 
