--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="flex items-center gap-2 mt-2 md:mt-0">
                     <button id="savedTripsBtn" class="px-3 py-1 bg-orange-700 text-white rounded hover:bg-orange-600">
-                        <i class="fa-solid fa-book-open ml-2"></i>טיולים שמורים
+                        <i class="fa-solid fa-book-open ml-2"></i>מסלולים שמורים
                     </button>
                     <button id="tabMap" class="px-3 py-1 bg-blue-700 text-white rounded hover:bg-blue-600">
                         <i class="fa-solid fa-globe ml-2"></i>מפה
@@ -48,15 +48,15 @@
             <!-- Main content: Map tab and Editor tab (hidden/shown by tabs) -->
             <main class="">
                 <!-- Toast Notification -->
-                <div id="toast" class="fixed top-4 mr-50 z-50 hidden animated-fade">
+                <div id="toast" class="fixed top-4 mr-50 z-100 hidden animated-fade">
                     <!-- RTL: put toast left -->
                     <div id="toastMsg" class="px-4 py-2 rounded shadow-lg font-bold flex items-center gap-2"></div>
                 </div>
                 <!-- Saved Trips Modal -->
-                <div id="savedTripsModal" class="fixed inset-0 z-150 flex items-center justify-center bg-black/50 hidden">
+                <div id="savedTripsModal" class="fixed inset-0 z-20 flex items-center justify-center bg-black/50 hidden">
                     <div class="bg-gray-800 rounded-lg shadow-lg p-6 w-full max-w-xl text-right">
                         <div class="flex items-center justify-between mb-4">
-                            <h3 class="text-lg font-bold">טיולים שמורים</h3>
+                            <h3 class="text-lg font-bold">מסלולים שמורים</h3>
                             <div class="flex items-center gap-2">
                                 <button id="saveToLibraryBtn" class="px-3 py-1 bg-green-600 text-white rounded">שמור את המסלול הנוכחי</button>
                                 <button id="closeSavedTripsBtn" class="px-3 py-1 bg-gray-600 text-white rounded">סגור</button>
@@ -64,6 +64,16 @@
                         </div>
                         <div id="savedTripsList" class="flex flex-col gap-2 max-h-80 overflow-auto">
                             <!-- populated dynamically -->
+                        </div>
+                    </div>
+                </div>
+                <!-- Confirmation Modal -->
+                <div id="confirmModal" class="fixed inset-0 z-30 flex items-center justify-center bg-black/50 hidden">
+                    <div class="bg-gray-800 rounded-lg shadow-lg p-6 w-full max-w-sm text-center">
+                        <div id="confirmModalMsg" class="text-lg text-gray-100 mb-6"></div>
+                        <div class="flex justify-center gap-4">
+                            <button id="confirmYes" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">אישור</button>
+                            <button id="confirmNo" class="px-4 py-2 bg-gray-600 text-white rounded hover:bg-gray-700">ביטול</button>
                         </div>
                     </div>
                 </div>
@@ -115,16 +125,6 @@
                         <button id="exportBtn" class="px-3 py-1 bg-indigo-600 text-white rounded hover:bg-indigo-700 flex items-center" title="ייצא HTML סטטי">
                             <i class="fa-solid fa-file-arrow-down ml-2"></i>ייצא
                         </button>
-                    </div>
-                    <!-- Confirmation Modal -->
-                    <div id="confirmModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black/50 hidden">
-                        <div class="bg-gray-800 rounded-lg shadow-lg p-6 w-full max-w-sm text-center">
-                            <div id="confirmModalMsg" class="text-lg text-gray-100 mb-6"></div>
-                            <div class="flex justify-center gap-4">
-                                <button id="confirmYes" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">אישור</button>
-                                <button id="confirmNo" class="px-4 py-2 bg-gray-600 text-white rounded hover:bg-gray-700">ביטול</button>
-                            </div>
-                        </div>
                     </div>
                     <!-- Editor area -->
                     <main class="max-w-7xl mx-auto w-full pt-2 pb-24 px-2">
@@ -871,7 +871,7 @@
     // include trip metadata (name/description) when available
     const _trip = ensureTrip();
     function escHtml(s) { if (!s && s !== 0) return ''; return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;').replace(/'/g,'&#39;'); }
-    let bodyHtml = `<div class="title-row">${svgIcon}<h2>מסלוליק - תוכנית טיול</h2></div>`;
+    let bodyHtml = `<div class="title-row">${svgIcon}<h2>מסלוליק - תוכנית מסלול</h2></div>`;
     if (_trip && _trip.name) bodyHtml += `<div style="margin:10px 0"><h1 style="margin:0;color:#93c5fd;font-size:22px">${escHtml(_trip.name)}</h1></div>`;
     if (_trip && _trip.description) bodyHtml += `<div style="margin-bottom:12px;color:#cbd5e1">${escHtml(_trip.description)}</div>`;
     getDays().forEach(day => {
@@ -1019,7 +1019,7 @@
             const store = loadSavedTripsFromStorage();
             savedTripsList.innerHTML = '';
             const keys = Object.keys(store).sort((a,b) => a.localeCompare(b));
-            if (!keys.length) { savedTripsList.innerHTML = '<div class="text-gray-300">אין טיולים שמורים</div>'; return; }
+            if (!keys.length) { savedTripsList.innerHTML = '<div class="text-gray-300">אין מסלולים שמורים</div>'; return; }
             keys.forEach(name => {
                 const item = document.createElement('div'); item.className = 'flex items-center justify-between p-2 bg-gray-700 rounded';
                 item.innerHTML = `
@@ -1040,26 +1040,28 @@
                     loadPlaces(getDays()); 
                     saveTripToStorageDebounced(0); 
                     savedTripsModal.classList.add('hidden'); 
-                    showToast('הטיול נטען'); };
+                    showToast('המסלול נטען'); };
                 delBtn.onclick = function(){
-                    showConfirmModal('למחוק את הטיול הזה?', function(confirmed){ if (!confirmed) return; delete store[name]; persistSavedTrips(store); renderSavedTripsList(); showToast('הטיול נמחק'); });
+                    showConfirmModal('למחוק את המסלול הזה?', function(confirmed){ if (!confirmed) return; delete store[name]; persistSavedTrips(store); renderSavedTripsList(); showToast('המסלול נמחק'); });
                 };
                 savedTripsList.appendChild(item);
             });
         }
 
-        if (savedTripsBtn) savedTripsBtn.addEventListener('click', function(){ renderSavedTripsList(); savedTripsModal.classList.remove('hidden'); });
-        if (closeSavedTripsBtn) closeSavedTripsBtn.addEventListener('click', function(){ savedTripsModal.classList.add('hidden'); });
-        if (saveToLibraryBtn) saveToLibraryBtn.addEventListener('click', function(){
+        function saveTripToList(){
             const t = ensureTrip(); const name = (t.name || '').trim();
-            if (!name) { showToast('הזן שם כשתשמור', true); return; }
+            if (!name) { showToast('תן שם למסלול כדי לשמור אותו', true); return; }
             const store = loadSavedTripsFromStorage();
             store[name] = JSON.parse(JSON.stringify(t)); // clone
             persistSavedTrips(store);
             renderSavedTripsList();
             savedTripsModal.classList.add('hidden');
-            showToast('הטיול נשמר');
-        });
+            showToast('המסלול נשמר');
+        }
+
+        if (savedTripsBtn) savedTripsBtn.addEventListener('click', function(){ renderSavedTripsList(); savedTripsModal.classList.remove('hidden'); });
+        if (closeSavedTripsBtn) closeSavedTripsBtn.addEventListener('click', function(){ savedTripsModal.classList.add('hidden'); });
+        if (saveToLibraryBtn) saveToLibraryBtn.addEventListener('click', saveTripToList);
 
             // Trip metadata inputs wiring (centralized)
             function populateTripInputs(tr) {
